examples/manifests/combined/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: zelt
  labels:
    application: zelt-locust
