examples/manifests/combined/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zelt-service
  namespace: zelt
  labels:
    application: zelt-locust
spec:
  selector:
    application: zelt-locust
    role: controller
  ports:
    - port: 8089
      name: web
